// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render error for invalid form submission 1`] = `
<div
  className="activity-form"
>
  <form
    onSubmit={[Function]}
  >
    <label>
      Name
    </label>
    <br />
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value=""
    />
    <label>
      Sport
    </label>
    <br />
    <select
      onChange={[Function]}
    >
      <option
        value="running"
      >
        Running
      </option>
      <option
        value="walking"
      >
        Walking
      </option>
      <option
        value="cycling"
      >
        Cycling
      </option>
      <option
        value="swimming"
      >
        Swimming
      </option>
    </select>
    <label>
      Distance
    </label>
    <br />
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value="0 km"
    />
    <button
      className="button pull-right"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`should render error for invalid form submission 2`] = `
<div
  className="activity-form"
>
  <p>
    Please enter a name first.
  </p>
  <form
    onSubmit={[Function]}
  >
    <label>
      Name
    </label>
    <br />
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value=""
    />
    <label>
      Sport
    </label>
    <br />
    <select
      onChange={[Function]}
    >
      <option
        value="running"
      >
        Running
      </option>
      <option
        value="walking"
      >
        Walking
      </option>
      <option
        value="cycling"
      >
        Cycling
      </option>
      <option
        value="swimming"
      >
        Swimming
      </option>
    </select>
    <label>
      Distance
    </label>
    <br />
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value="0 km"
    />
    <button
      className="button pull-right"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`should render the activity form 1`] = `
<div
  className="activity-form"
>
  <form
    onSubmit={[Function]}
  >
    <label>
      Name
    </label>
    <br />
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value=""
    />
    <label>
      Sport
    </label>
    <br />
    <select
      onChange={[Function]}
    >
      <option
        value="running"
      >
        Running
      </option>
      <option
        value="walking"
      >
        Walking
      </option>
      <option
        value="cycling"
      >
        Cycling
      </option>
      <option
        value="swimming"
      >
        Swimming
      </option>
    </select>
    <label>
      Distance
    </label>
    <br />
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value="0 km"
    />
    <button
      className="button pull-right"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`should render the activity form with data 1`] = `
<div
  className="activity-form"
>
  <form
    onSubmit={[Function]}
  >
    <label>
      Name
    </label>
    <br />
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value="Evening Walk"
    />
    <label>
      Sport
    </label>
    <br />
    <select
      onChange={[Function]}
    >
      <option
        value="running"
      >
        Running
      </option>
      <option
        value="walking"
      >
        Walking
      </option>
      <option
        value="cycling"
      >
        Cycling
      </option>
      <option
        value="swimming"
      >
        Swimming
      </option>
    </select>
    <label>
      Distance
    </label>
    <br />
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value="2 km"
    />
    <button
      className="button pull-right"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`should set activity type on select change 1`] = `
<div
  className="activity-form"
>
  <form
    onSubmit={[Function]}
  >
    <label>
      Name
    </label>
    <br />
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value=""
    />
    <label>
      Sport
    </label>
    <br />
    <select
      onChange={[Function]}
    >
      <option
        value="running"
      >
        Running
      </option>
      <option
        value="walking"
      >
        Walking
      </option>
      <option
        value="cycling"
      >
        Cycling
      </option>
      <option
        value="swimming"
      >
        Swimming
      </option>
    </select>
    <label>
      Distance
    </label>
    <br />
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value="0 km"
    />
    <button
      className="button pull-right"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`should set activity type on select change 2`] = `
<div
  className="activity-form"
>
  <form
    onSubmit={[Function]}
  >
    <label>
      Name
    </label>
    <br />
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value=""
    />
    <label>
      Sport
    </label>
    <br />
    <select
      onChange={[Function]}
    >
      <option
        value="running"
      >
        Running
      </option>
      <option
        value="walking"
      >
        Walking
      </option>
      <option
        value="cycling"
      >
        Cycling
      </option>
      <option
        value="swimming"
      >
        Swimming
      </option>
    </select>
    <label>
      Distance
    </label>
    <br />
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value="0 km"
    />
    <button
      className="button pull-right"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`should set distance on input change 1`] = `
<div
  className="activity-form"
>
  <form
    onSubmit={[Function]}
  >
    <label>
      Name
    </label>
    <br />
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value=""
    />
    <label>
      Sport
    </label>
    <br />
    <select
      onChange={[Function]}
    >
      <option
        value="running"
      >
        Running
      </option>
      <option
        value="walking"
      >
        Walking
      </option>
      <option
        value="cycling"
      >
        Cycling
      </option>
      <option
        value="swimming"
      >
        Swimming
      </option>
    </select>
    <label>
      Distance
    </label>
    <br />
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value="0 km"
    />
    <button
      className="button pull-right"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`should set distance on input change 2`] = `
<div
  className="activity-form"
>
  <form
    onSubmit={[Function]}
  >
    <label>
      Name
    </label>
    <br />
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value=""
    />
    <label>
      Sport
    </label>
    <br />
    <select
      onChange={[Function]}
    >
      <option
        value="running"
      >
        Running
      </option>
      <option
        value="walking"
      >
        Walking
      </option>
      <option
        value="cycling"
      >
        Cycling
      </option>
      <option
        value="swimming"
      >
        Swimming
      </option>
    </select>
    <label>
      Distance
    </label>
    <br />
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value="20 km"
    />
    <button
      className="button pull-right"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`should set name on input change 1`] = `
<div
  className="activity-form"
>
  <form
    onSubmit={[Function]}
  >
    <label>
      Name
    </label>
    <br />
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value=""
    />
    <label>
      Sport
    </label>
    <br />
    <select
      onChange={[Function]}
    >
      <option
        value="running"
      >
        Running
      </option>
      <option
        value="walking"
      >
        Walking
      </option>
      <option
        value="cycling"
      >
        Cycling
      </option>
      <option
        value="swimming"
      >
        Swimming
      </option>
    </select>
    <label>
      Distance
    </label>
    <br />
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value="0 km"
    />
    <button
      className="button pull-right"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`should set name on input change 2`] = `
<div
  className="activity-form"
>
  <form
    onSubmit={[Function]}
  >
    <label>
      Name
    </label>
    <br />
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value="Evening Walk"
    />
    <label>
      Sport
    </label>
    <br />
    <select
      onChange={[Function]}
    >
      <option
        value="running"
      >
        Running
      </option>
      <option
        value="walking"
      >
        Walking
      </option>
      <option
        value="cycling"
      >
        Cycling
      </option>
      <option
        value="swimming"
      >
        Swimming
      </option>
    </select>
    <label>
      Distance
    </label>
    <br />
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value="0 km"
    />
    <button
      className="button pull-right"
    >
      Submit
    </button>
  </form>
</div>
`;
